Render empty line invisibles at correct position
End of line invisibles are not rendered at the correct
position for empty lines instead of always after the
last indent guide span.

Closes #456

--- a/static/editor.less
+++ b/static/editor.less
@@ -81,13 +81,11 @@
 }
 
 .editor .invisible-character {
-  opacity: 0.2;
   font-weight: normal !important;
   font-style: normal !important;
 }
 
 .editor .indent-guide {
-  opacity: 0.2;
   display: inline-block;
   box-shadow: inset 1px 0px;
 }
